--- a/MvcSiteMapProvider_407/MvcSiteMapProvider_407/Web.config
+++ b/MvcSiteMapProvider_407/MvcSiteMapProvider_407/Web.config
@@ -25,6 +25,7 @@
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.6" />
     <httpRuntime targetFramework="4.6" />
+    <sessionState cookieless="UseUri" />
     <pages>
       <namespaces>
         <add namespace="MvcSiteMapProvider.Web.Html" />
